# projekt-lmp10

./: CMakeLists.txt  Makefile  algorytm.txt  apro_trygo.c  aprox  main.c  myplot
test/: gen.c
